--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: SHABNAM HASAN # your name (or website title) here
+logo: "/images/mypic.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  I am an enthusiastic and determined Machine Learning Engineer who takes pride in building models that translate data into insight.
+  My immense interest in the field helped me in acquiring in-depth knowledge through theory courses and project development.
+  I am eager to apply the knowledge and experience in designing and conduct of projects addressing real-world issues.
   <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/shabnam-hasan-1588949a">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
