--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: SHABNAM HASAN # your name (or website title) here
-logo: "/images/mypic.png?raw=true" # your photo (or logo) here
+logo: "/images/mypic.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   I am an enthusiastic and determined Machine Learning Engineer who takes pride in building models that translate data into insight.
   My immense interest in the field helped me in acquiring in-depth knowledge through theory courses and project development.
