--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,6 @@
 title: SHABNAM HASAN # your name (or website title) here
-logo: "/images/me1 (2).jpg?raw=true" # your photo (or logo) here
+logo: "/images/me.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  I am an enthusiastic and determined Machine Learning Engineer who takes pride in building models that translate data into insight.
-  My immense interest in the field helped me in acquiring in-depth knowledge through theory courses and project development.
-  <br><br>
-  <a href="https://www.linkedin.com/in/shabnam-hasan-1588949a">View My LinkedIn Profile</a> 
+  Enthusiastic and determined Machine Learning Engineer.<br/>
+  <a href="https://www.linkedin.com/in/shabnam-hasan-1588949a">View My LinkedIn Profile</a>
   
-theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
