Set theme jekyll-theme-architect

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ description: > # your text below (remove <br> elements if you don't need line br
   Enthusiastic and determined Machine Learning Engineer.<br/>
   <a href="https://www.linkedin.com/in/shabnam-hasan-1588949a">View My LinkedIn Profile</a>
   
-theme: jekyll-theme-devlopr
+theme: jekyll-theme-architect
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
   
