--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 title: SHABNAM HASAN # your name (or website title) here
 logo: "/images/me.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Enthusiastic and determined Machine Learning Engineer.<br/>
+  Machine Learning Engineer<br/>
   <a href="https://www.linkedin.com/in/shabnam-hasan-1588949a">View My LinkedIn Profile</a>
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
   
