--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,6 @@
-title: SHABNAM HASAN<br/>
-Machine Learning Engineer
-# your name (or website title) here
+title: SHABNAM HASAN# your name (or website title) here
 logo: "/images/me.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  <br/>
+  MACHINE LEARNING ENGINEER<br/>
   <a href="https://www.linkedin.com/in/shabnam-hasan-1588949a">View My LinkedIn Profile</a>
-  
 theme: jekyll-theme-minimal
-  
