Set theme jekyll-theme-hacker

--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ description: > # your text below (remove <br> elements if you don't need line br
   MACHINE LEARNING ENGINEER<br/>
   <br/>
   <a href="https://www.linkedin.com/in/shabnam-hasan-1588949a">View My LinkedIn Profile</a>
-theme: jekyll-theme-midnight
+theme: jekyll-theme-hacker
